--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,12 @@
       ],
       "common/*": [
         "dist/common/*"
+      ],
+      "country": [
+        "dist/country"
+      ],
+      "country/*": [
+        "dist/country/*"
       ]
     }
   },
